@@ -11,4 +11,5 @@
   14-Dec-2020  - V0.20 Suppress stderr in the export of mysql table data.
   13-May-2021  - V0.21 Additional caching and stashing functions for all providers
   12-Jun-2021  - V0.22 Adding SAbDabTargetFeatureProvider() and CARDTargetFeatureProvider() modules
+  13-Jun-2021  - V0.23 Move features to separate paths in CARDTargetFeatureProvider() and SAbDabTargetFeatureProvider()
 
